# Endstone

./: Cargo.toml  README.md
src/: client.rs  main.rs  server.rs
src/client/: MinecraftConnection.rs  connection.rs  mod.rs  player.rs
src/player/: player.rs
src/server/: auth.rs  client.rs  hash.rs  mod.rs  network.rs  player.rs  server.rs
