[package]
name = "Endstone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
anyhow = "1.0.52"
tokio = { version = "0.2.25", features = ["rt-threaded"] }
mcproto-rs = { git = "https://github.com/Twister915/mcproto-rs", branch = "master" }
mctokio = { git = "https://github.com/Twister915/mctokio", branch = "master", version = "0.1" }
openssl = {version = "0.10.30", features = ["vendored"]}
serde_json = "1.0.59"
serde = "1.0.117"
reqwest = "0.10.8"
hex = "0.4.2"
rand = "0.3.0"