[package]
name = "Endstone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
anyhow = "1.0.52"
tokio = { version = "1.18.0", features = ["full"] }
mcproto-rs = "0.2.0"
craftio-rs = {version = "0.1.0", features = ["compression"]}
openssl = { version = "0.10.30", features = ["vendored"]}
serde_json = "1.0.59"
serde = "1.0.117"
reqwest = "0.10.8"
hex = "0.4.2"
rand = "0.3.0"
log4rs = "1.1.1"